Añadido http://lokeshdhakar.com/projects/lightbox2/ para ampliar las fotos de los pasos de las recetas en la plantilla de recetas.

--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -14,6 +14,7 @@
     <link href="{% static 'webapp/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'webapp/css/starter-template.css' %}" rel="stylesheet">
     <link href="{% static 'webapp/css/font-awesome.min.css' %}" rel="stylesheet">
+    <link href="{% static 'webapp/css/lightbox.css' %}" rel="stylesheet" />
 
 
     {% block custom_css %}
@@ -106,6 +107,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="{% static 'webapp/js/jquery.min.js' %}"></script>
     <script src="{% static 'webapp/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'webapp/js/lightbox.min.js' %}"></script>
     {% block custom_js %} {% endblock %}
 </footer>
 </body>
