Mejorado indicador de receta padre
Puesto el enlace a la línea completa y dado efecto cursiva al nombre de la receta.

--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -748,13 +748,16 @@ header .container {
     opacity: 1;
 }
 
-.recipe-parent span{
-}
-.recipe-parent a{
+.recipe-parent a {
     color: #CC3E27;
 }
+
 .recipe-parent a:hover {
     text-decoration: none;
+}
+
+.recipe-parent-name {
+    font-style: italic;
 }
 
 .main-picture-padding {
