--- a/templates/webapp/recipe_template.html
+++ b/templates/webapp/recipe_template.html
@@ -6,10 +6,11 @@
     <!-- Start Recipe -->
     <!-- Column Left -->
 
+    <!-- Title -->
     <div class="col-md-8 col-md-offset-2">
     <h1 class="recipe-name">{{ receta.title }}</h1>
     {% if receta.parent %}
-        <h5 class="recipe-parent"><span><i class="fa fa-code-fork"></i> Cloned from: </span><a href="{% url 'recipe' receta.parent.id %}">{{ receta.parent.author.profile.get.display_name }} - {{ receta.parent.title }}</a></h5>
+        <h5 class="recipe-parent"><a href="{% url 'recipe' receta.parent.id %}"><i class="fa fa-code-fork"></i> Cloned from: <span class="recipe-parent-name">{{ receta.parent.author.profile.get.display_name }} - {{ receta.parent.title }}</span></a></h5>
     {% endif %}
 
     <div class="panel main-picture-padding row">
