--- a/templates/webapp/recipes.html
+++ b/templates/webapp/recipes.html
@@ -34,7 +34,7 @@
     </div>
 {% else %}
         <div class="recipe-name">
-            <h2 class="follow-msg">{% trans "Don't you have recipes? Let's make yourself one!" %}</h2>
+            <h2 class="follow-msg">{% trans "This user does not has any recipe yet" %}</h2>
         </div>
 {% endif %}
 {% endblock %}
