Aumentada anchura del diálogo modal con la lista de recetas hijas

--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -902,6 +902,10 @@ header .container {
     font-size: 22px;
 }
 
+.recipe-modal-children .modal-dialog {
+    width: 500px;
+}
+
 .recipe-modal-children .modal-body ul {
     list-style: none;
     padding: 0;
