--- a/templates/webapp/recipe_template.html
+++ b/templates/webapp/recipe_template.html
@@ -66,7 +66,7 @@
                     </a>{% endif %}
             </div>
             <div class="modal fade recipe-modal-children" tabindex="-1" role="dialog" aria-hidden="true">
-                <div class="modal-dialog modal-sm">
+                <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
                             <h4 class="modal-title">{% trans "Recipes derived from this:" %}</h4>
