--- a/templates/webapp/main.html
+++ b/templates/webapp/main.html
@@ -13,12 +13,14 @@
                             <img src="{{ recipe.main_image.url }}" style="width: 100%; height: 100%; opacity: 0">
                         </a>
                     </div>
-                    <div class="main-card-name">
-                        <a class="recipe-title" href="{% url 'recipe' recipe.id %}"><span>{{ recipe.title }}</span></a>
-                    </div>
+                    <div class="main-card-content">
+                        <div class="main-card-name">
+                            <a class="recipe-title" href="{% url 'recipe' recipe.id %}"><span>{{ recipe.title }}</span></a>
+                        </div>
 
-                    <div class="main-card-description">
-                        {{ recipe.description }}
+                        <div class="main-card-description">
+                            {{ recipe.description }}
+                        </div>
                     </div>
                     <div class="recipe-time">
                         <span class="glyphicon glyphicon-time"></span>
@@ -45,7 +47,7 @@
     <script src="{% static 'webapp/js/jquery.dotdotdot.min.js' %}"></script>
     <script>
         $().ready(function () {
-            $(".main-card-description").dotdotdot();
+            $(".main-card-content").dotdotdot();
         });
     </script>
 {% endblock %}
