correccion de error en el TAG

--- a/templates/webapp/newrecipe.html
+++ b/templates/webapp/newrecipe.html
@@ -754,7 +754,7 @@
                 <input type="submit" class="btn btn-success" value="Publish recipe"/>
             </div>
             <div class="col-sm-3">
-                <a class="btn btn-info">{% trans "Save as draft"}</a>
+                <a class="btn btn-info">{% trans "Save as draft"%}</a>
             </div>
         </div>
     </fieldset>
