--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -146,12 +146,52 @@
     <!-- /.container -->
 </main>
 <footer>
+    <div class="footer">
+
+        <div class="container color-footer">
+            <div class="col-md-4">
+                <div class="text-center">
+                    <img class="footer-logo" src="static/webapp/image/logo_big.png" class="img-circle">
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div class="row">
+                <div class="col-md-2 text-center"><a href="" class="link-footer">Terms & conditions</a></div>
+                <div class="col-md-2 text-center"><a href="" class="link-footer">Our goals</a></div>
+                <div class="col-md-2 text-center"><a href="" class="link-footer">The team</a></div>
+                <div class="col-md-2 text-center"><a href="" class="link-footer">Contact</a></div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="{% static 'webapp/js/jquery.min.js' %}"></script>
     <script src="{% static 'webapp/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'webapp/js/lightbox.min.js' %}"></script>
+    <script>
+        $().ready(function () {
+            $(".footer-logo").hover(
+                    function () {
+                        $(".footer-logo").addClass("hover");
+                    },
+                    function () {
+                        $(".footer-logo").removeClass("hover");
+                    }
+            );
+
+            //XXX Cuidado, valores puestos a mano. Se podría animar con una clase usando jQueryUI
+            $(".footer-logo").hover(
+                    function () {
+                        $(".footer-logo").animate({"margin-bottom": 0}, 150)
+                    },
+                    function () {
+                        $(".footer-logo").animate({"margin-bottom": "-60px"}, 150)
+                    }
+            );
+        });
+    </script>
     {% block custom_js %} {% endblock %}
 </footer>
 </body>
