--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -15,6 +15,7 @@
     <link href="{% static 'webapp/css/starter-template.css' %}" rel="stylesheet">
     <link href="{% static 'webapp/css/font-awesome.min.css' %}" rel="stylesheet">
     <link href="{% static 'webapp/css/lightbox.css' %}" rel="stylesheet"/>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:200' rel='stylesheet' type='text/css'>
 
 
     {% block custom_css %}
@@ -147,22 +148,19 @@
 </main>
 <footer>
     <div class="footer">
-
-        <div class="container color-footer">
             <div class="col-md-4">
                 <div class="text-center">
-                    <img class="footer-logo" src="static/webapp/image/logo_big.png" class="img-circle">
+                    <img class="footer-logo" src="{% static 'webapp/image/logo_footer.png' %}" class="img-circle">
                 </div>
             </div>
             <div class="col-md-8">
                 <div class="row">
-                    <div class="col-md-2 text-center"><a href="" class="link-footer">Terms & conditions</a></div>
-                    <div class="col-md-2 text-center"><a href="" class="link-footer">Our goals</a></div>
-                    <div class="col-md-2 text-center"><a href="" class="link-footer">The team</a></div>
-                    <div class="col-md-2 text-center"><a href="" class="link-footer">Contact</a></div>
+                    <div class="col-md-2 text-center"><a href="#" class="footer-link">Terms & conditions</a></div>
+                    <div class="col-md-2 text-center"><a href="#" class="footer-link">Our goals</a></div>
+                    <div class="col-md-2 text-center"><a href="#" class="footer-link">The team</a></div>
+                    <div class="col-md-2 text-center"><a href="#" class="footer-link">Contact</a></div>
                 </div>
             </div>
-        </div>
     </div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
