--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -153,7 +153,7 @@
                     <img class="footer-logo" src="{% static 'webapp/image/logo_footer.png' %}" class="img-circle">
                 </div>
             </div>
-            <div class="col-md-8">
+            <div class="col-md-8 footer-content">
                 <div class="row">
                     <div class="col-md-2 text-center"><a href="#" class="footer-link">Terms & conditions</a></div>
                     <div class="col-md-2 text-center"><a href="#" class="footer-link">Our goals</a></div>
@@ -170,22 +170,13 @@
     <script src="{% static 'webapp/js/lightbox.min.js' %}"></script>
     <script>
         $().ready(function () {
-            $(".footer-logo").hover(
-                    function () {
-                        $(".footer-logo").addClass("hover");
-                    },
-                    function () {
-                        $(".footer-logo").removeClass("hover");
-                    }
-            );
-
             //XXX Cuidado, valores puestos a mano. Se podría animar con una clase usando jQueryUI
             $(".footer-logo").hover(
                     function () {
-                        $(".footer-logo").animate({"margin-bottom": 0}, 150)
+                        $(".footer-logo").animate({"margin-top": "7px"}, 150)
                     },
                     function () {
-                        $(".footer-logo").animate({"margin-bottom": "-60px"}, 150)
+                        $(".footer-logo").animate({"margin-top": "22px"}, 150)
                     }
             );
         });
