--- a/templates/webapp/profile.html
+++ b/templates/webapp/profile.html
@@ -29,7 +29,7 @@
             {% elif following %}
                 <a id="btn-unfollow" class="btn btn-default btn-block btn-unfollow">{% trans "Unfollow" %}</a>
             {% else %}
-                <a id="btn-follow" class="btn btn-default btn-block btn-follow">Follow</a>
+                <a id="btn-follow" class="btn btn-default btn-block btn-follow">{% trans "Follow" %}</a>
             {% endif %}
             <!-- Alert boxes-->
             <div id="error-follow" class="alert alert-dismissable alert-danger alert-follow">
